--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libtok2me = {path = "./libtok2me"}
+libtok2me = {git = "https://github.com/andyslucky/libtok2me"}
 clap = "3.0.0-beta.2"
